prevent code in tables from wrapping
- this forces the cell to display at full width without breaking the
code to the next line

--- a/themes/cypress/source/css/_partial/page.scss
+++ b/themes/cypress/source/css/_partial/page.scss
@@ -143,6 +143,10 @@
     width: 100%;
     border: 1px solid #e8e8e8;
 
+    code {
+      white-space: nowrap;
+    }
+
     th {
       font-weight: 500;
       padding: 2px 15px;
